implement both label and meta table pix res in cube.imshow.

--- a/notebooks/io development.ipynb
+++ b/notebooks/io development.ipynb
@@ -8,18 +8,18 @@
    },
    "outputs": [],
    "source": [
-    "from pyciss.io import RingCube, PathManager"
+    "from pyciss.io import RingCube, PathManager, db_mapped_cubes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pm = PathManager(\"N1591682340\") "
+    "pm = PathManager(\"N1467345444\") "
    ]
   },
   {
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "resonances.sort_values(by='Resonance (km)',ascending=False)"
+    "resonances.sort_values(by='Resonance (km)',ascending=False).head()"
    ]
   },
   {
@@ -94,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "cube = RingCube(pm.cal_cub)"
+    "meta_df.loc[pm._id]"
    ]
   },
   {
@@ -105,7 +105,18 @@
    },
    "outputs": [],
    "source": [
-    "cube.is_lit"
+    "cube = RingCube(pm.cubepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cube.meta.pixres"
    ]
   },
   {
@@ -116,7 +127,7 @@
    },
    "outputs": [],
    "source": [
-    "from pyciss.meta import meta2500m as meta"
+    "%matplotlib nbagg"
    ]
   },
   {
@@ -127,7 +138,7 @@
    },
    "outputs": [],
    "source": [
-    "cube.meta.ring_geom"
+    "cube.imshow()"
    ]
   },
   {
@@ -138,7 +149,113 @@
    },
    "outputs": [],
    "source": [
-    "meta[meta.id==cube.pm._id]"
+    "cube.meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dics = []\n",
+    "for p in db_mapped_cubes():\n",
+    "    d = {}\n",
+    "    d['path'] = p\n",
+    "    cube = RingCube(p)\n",
+    "    d['meta_res'] = cube.meta_pixres\n",
+    "    d['label_res'] = cube.resolution_val\n",
+    "    dics.append(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(dics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.plot(style='*-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cube = RingCube(df[df.label_res>5000].path.values[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cube.imshow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cube.pm.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cube.get_opus_meta_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cube.opusmeta.ring_geom"
    ]
   },
   {
