update meta data for resonances to include swapped Janus and Epimetheus

--- a/notebooks/io development.ipynb
+++ b/notebooks/io development.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "pm = PathManager(\"N1467345444\") "
+    "all_mapped_cubes = db_mapped_cubes()"
    ]
   },
   {
@@ -33,90 +33,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pkg_resources as pr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "with pr.resource_stream('pyciss', 'data/ring_resonances.csv') as f:\n",
-    "    resonances = pd.read_csv(f)\n",
-    "resonances.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "resonances.sort_values(by='Resonance (km)',ascending=False).head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from pyciss.meta import meta_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "meta_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "meta_df.loc[pm._id]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cube = RingCube(pm.cubepath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cube.meta.pixres"
+    "from pyciss.meta import prime_resonances"
    ]
   },
   {
@@ -138,6 +59,7 @@
    },
    "outputs": [],
    "source": [
+    "cube = RingCube(next(all_mapped_cubes))\n",
     "cube.imshow()"
    ]
   },
@@ -374,7 +296,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib nbagg"
+    "%matplotlib inline"
    ]
   },
   {
