--- a/notebooks/io development.ipynb
+++ b/notebooks/io development.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "all_mapped_cubes = db_mapped_cubes()"
+    "all_mapped_cubes = list(db_mapped_cubes())"
    ]
   },
   {
@@ -59,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "cube = RingCube(next(all_mapped_cubes))\n",
+    "cube = RingCube(all_mapped_cubes[5])\n",
     "cube.imshow()"
    ]
   },
@@ -71,7 +71,19 @@
    },
    "outputs": [],
    "source": [
-    "cube.meta"
+    "def get_all_meta_data(p):\n",
+    "    from pyciss.io import RingCube\n",
+    "    d = {}\n",
+    "    d['path'] = p\n",
+    "    cube = RingCube(p)\n",
+    "    opusmeta = cube.get_opus_meta_data()\n",
+    "    d['meta_res'] = cube.meta_pixres\n",
+    "    d['label_res'] = cube.resolution_val\n",
+    "    d['time'] = cube.imagetime\n",
+    "    res1 = opusmeta.ring_geom['projected_radial_resolution1']\n",
+    "    res2 = opusmeta.ring_geom['projected_radial_resolution2']\n",
+    "    d['opusres'] = int((res1+res2)/2*1000)\n",
+    "    return d"
    ]
   },
   {
@@ -82,15 +94,9 @@
    },
    "outputs": [],
    "source": [
-    "dics = []\n",
-    "for p in db_mapped_cubes():\n",
-    "    d = {}\n",
-    "    d['path'] = p\n",
-    "    cube = RingCube(p)\n",
-    "    d['meta_res'] = cube.meta_pixres\n",
-    "    d['label_res'] = cube.resolution_val\n",
-    "    d['time'] = cube.imagetime\n",
-    "    dics.append(d)"
+    "from ipyparallel import Client\n",
+    "c = Client()\n",
+    "lbview = c.load_balanced_view()"
    ]
   },
   {
@@ -101,7 +107,74 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(dics)"
+    "from nbtools import display_multi_progress"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "results = lbview.map_async(get_all_meta_data, all_mapped_cubes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "display_multi_progress(results, all_mapped_cubes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(results.result())\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('all_meta.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('all_meta.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.columns"
    ]
   },
   {
@@ -123,7 +196,29 @@
    },
    "outputs": [],
    "source": [
-    "df['id'] = df.path.map(lambda x: x.name.split('_')[0])"
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df['id'] = df.path.map(lambda x: Path(x).name.split('_')[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.id.head()"
    ]
   },
   {
@@ -167,18 +262,7 @@
    },
    "outputs": [],
    "source": [
-    "df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df['ratio'] = df.meta_res / df.label_res"
+    "df.describe()"
    ]
   },
   {
@@ -189,7 +273,10 @@
    },
    "outputs": [],
    "source": [
-    "df[df.label_res<5000].plot(style='*')"
+    "t0 = '2004-12'\n",
+    "t1 = '2005-07'\n",
+    "t2 = '2005-08'\n",
+    "df[:t0].plot(style='*', logy=False, markersize=16, rot=25)"
    ]
   },
   {
