new: dev: adding test notebooks for opusapi

--- a/notebooks/tests/test_io.ipynb
+++ b/notebooks/tests/test_io.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from pyciss import io\n",
-    "import datetime as dt"
+    "# setup\n",
+    "from pyciss import io, ringcube\n",
+    "from pyciss.opusapi import OPUS\n",
+    "import tempfile\n",
+    "from pathlib import Path\n",
+    "tmpdir = tempfile.TemporaryDirectory()\n",
+    "opus = OPUS()\n",
+    "opus.query_image_id('N1695760475_1')\n",
+    "opus.download_results(savedir = tmpdir.name)"
    ]
   },
   {
@@ -21,19 +28,9 @@
    "outputs": [],
    "source": [
     "# test_image_time\n",
-    "cube = io.RingCube(\"/Volumes/Data/ciss/opus/N1467345444/N1467345444_2.cal.cub\")\n",
-    "assert cube.imagetime == dt.datetime(2004, 7, 1, 3, 33, 9, 285000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# test_survival\n",
+    "import datetime as dt\n",
+    "pathmanager = io.PathManager('N1467345444', savedir=tmpdir.name)\n",
+    "cube = ringcube.RingCube(pathmanager.cal_cub)\n",
     "assert cube.imagetime == dt.datetime(2004, 7, 1, 3, 33, 9, 285000)"
    ]
   }
