--- a/notebooks/tests/test_opus_api.ipynb
+++ b/notebooks/tests/test_opus_api.ipynb
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "# test_download_previews()\n",
+    "# test_download_previews\n",
     "opus.download_previews(savedir=tmpdir.name)\n",
     "assert (Path(tmpdir.name) / 'N1695760475' / 'N1695760475_1_med.jpg').exists()"
    ]
