chg: dev: fix some paths in PathManager,add test

--- a/notebooks/tests/test_io.ipynb
+++ b/notebooks/tests/test_io.ipynb
@@ -15,7 +15,8 @@
     "from pathlib import Path\n",
     "tmpdir = tempfile.TemporaryDirectory()\n",
     "opus = OPUS()\n",
-    "opus.query_image_id('N1695760475_1')\n",
+    "img_id = 'N1695760475'\n",
+    "opus.query_image_id(img_id)\n",
     "opus.download_results(savedir = tmpdir.name)"
    ]
   },
@@ -27,12 +28,20 @@
    },
    "outputs": [],
    "source": [
-    "# test_image_time\n",
-    "import datetime as dt\n",
-    "pathmanager = io.PathManager('N1695760475')\n",
-    "# cube = ringcube.RingCube(pathmanager.cal_cub)\n",
-    "# assert cube.imagetime == dt.datetime(2004, 7, 1, 3, 33, 9, 285000)"
+    "# test_PathManager\n",
+    "pathmanager = io.PathManager(img_id, savedir=tmpdir.name)\n",
+    "assert pathmanager.raw_image == Path(tmpdir.name) / img_id / (img_id+'_1.IMG')\n",
+    "assert pathmanager.cubepath == Path(tmpdir.name) / img_id / (img_id+'_1.cal.dst.map.cub')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
