--- a/pyciss/tests/test_io.ipynb
+++ b/pyciss/tests/test_io.ipynb
@@ -33,22 +33,13 @@
     "assert pathmanager.raw_image == Path(tmpdir.name) / img_id / (img_id+'_1.IMG')\n",
     "assert pathmanager.cubepath == Path(tmpdir.name) / img_id / (img_id+'_1.cal.dst.map.cub')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [stable]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [stable]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -61,6 +52,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.1"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.1"
   }
  },
  "nbformat": 4,
