--- a/pyciss/tests/test_opus_api.ipynb
+++ b/pyciss/tests/test_opus_api.ipynb
@@ -91,15 +91,6 @@
     "# cleanup\n",
     "tmpdir.cleanup()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -119,6 +110,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.1"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.1"
   }
  },
  "nbformat": 4,
