--- a/pyciss/tests/test_opus_api.ipynb
+++ b/pyciss/tests/test_opus_api.ipynb
@@ -84,6 +84,67 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# test_get_between_times_strings\n",
+    "opus.get_between_times('2005-10-10:00:00:00', '2005-10-11:00:00:00')\n",
+    "# this should find 7 items\n",
+    "assert len(opus.obsids) == 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# test_get_between_times_datetimes\n",
+    "import datetime as dt\n",
+    "t1 = dt.datetime(2005, 10, 9)\n",
+    "t2 = dt.datetime(2005, 10, 10)\n",
+    "opus.get_between_times(t1, t2)\n",
+    "assert len(opus.obsids) == 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# test_get_radial_res_query\n",
+    "d = opus.get_radial_res_query(0.1, 0.2)\n",
+    "assert isinstance(d, dict)\n",
+    "assert d['instrumentid'] == 'Cassini+ISS'\n",
+    "assert d['projectedradialresolution1'] == 0.1\n",
+    "assert d['projectedradialresolution2'] == 0.2\n",
+    "assert d['target'] == 'S+RINGS'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# test_get_between_resolutions\n",
+    "opus.get_between_resolutions(0.1,0.5)\n",
+    "# should find 89 items\n",
+    "assert len(opus.obsids) == 89"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
