finish tests for meta.py and change io accordingly

--- a/pyciss/tests/test_meta.ipynb
+++ b/pyciss/tests/test_meta.ipynb
@@ -48,7 +48,84 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# test_get_resonances\n",
+    "# test if the reading of resonance file works\n",
+    "df = meta.get_resonances()\n",
+    "assert df.iloc[0]['name'] == 'Titan 2:0'\n",
+    "assert df.iloc[-1]['order'] == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# test_get_prime_resonances\n",
+    "# test if this filters for prime resonances (order = 1)\n",
+    "df = meta.get_prime_resonances()\n",
+    "assert meta.get_order(df.iloc[0]['name']) == 1\n",
+    "assert meta.get_order(df.iloc[-1]['name']) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# test_get_janus_epimetheus_resonances\n",
+    "# read higher precision Janus and Epimetheus resonance file\n",
+    "df = meta.get_janus_epimetheus_resonances()\n",
+    "assert df.iloc[0]['name'] == 'Janus1 2:1'\n",
+    "assert df.iloc[-1]['name'] == 'Epimetheus2 15:13'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# test_get_prime_jan_epi\n",
+    "# read and filter for prime resonances of Janus and Epimetheus\n",
+    "df = meta.get_prime_jan_epi()\n",
+    "assert df.iloc[0]['name'] == 'Janus1 2:1'\n",
+    "assert df.iloc[-1]['name'] == 'Epimetheus2 7:6'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# test_get_all_resonances\n",
+    "# read all moon resonances and merge them into one\n",
+    "df = meta.get_all_resonances()\n",
+    "assert df.iloc[0]['name'] == 'Titan 1:0'\n",
+    "assert df.iloc[-1]['name'] == 'Mimas 3:2'"
+   ]
   }
  ],
  "metadata": {
