--- a/pyciss/tests/test_io.ipynb
+++ b/pyciss/tests/test_io.ipynb
@@ -29,17 +29,30 @@
    "outputs": [],
    "source": [
     "# test_PathManager\n",
+    "# This test illustrates how the Pathmanager can be used to find where data is located\n",
+    "# This should only be required in rare cases.\n",
     "pathmanager = io.PathManager(img_id, savedir=tmpdir.name)\n",
+    "assert pathmanager.basepath == Path(tmpdir.name) / img_id\n",
     "assert pathmanager.raw_image == Path(tmpdir.name) / img_id / (img_id+'_1.IMG')\n",
     "assert pathmanager.cubepath == Path(tmpdir.name) / img_id / (img_id+'_1.cal.dst.map.cub')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [stable]",
+   "display_name": "Python [conda env:stable]",
    "language": "python",
-   "name": "Python [stable]"
+   "name": "conda-env-stable-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -51,11 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
