add .pyciss.yaml file as config path and other related changes

--- a/pyciss/tests/test_opus_api.ipynb
+++ b/pyciss/tests/test_opus_api.ipynb
@@ -145,13 +145,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# cleanup\n",
     "tmpdir.cleanup()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
