refactor get_cumulative to read_cumulative_index

--- a/pyciss/tests/test_opus_api.ipynb
+++ b/pyciss/tests/test_opus_api.ipynb
@@ -165,9 +165,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (stable)",
+   "display_name": "Python [conda env:stable]",
    "language": "python",
-   "name": "stable"
+   "name": "conda-env-stable-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -179,11 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
