change format to nbval plugin.
This means that each cell is just an example run.
If it would change, the test fails.

--- a/tests/test_io.ipynb
+++ b/tests/test_io.ipynb
@@ -1,23 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test format\n",
+    "\n",
+    "This notebook is using the `example` style of testing, using the [nbval](https://github.com/computationalmodelling/nbval) py.test plugin.\n",
+    "\n",
+    "This means no asserts are required, the nbval plugin just checks during each run if the stored output content of each cell is different than the output from the current execution.\n",
+    "\n",
+    "### PathManager\n",
+    "The PathManager manages the full paths to all data in the local image database.\n",
+    "\n",
+    "This is useful whenever during interactive data analysis, one needs a path to a specific product.\n",
+    "\n",
+    "Usually, it refers to the io.dbroot path (or get's it from the get_db_root()), but as we don't have that path on Travis, we just make up a virtual db path here."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# setup\n",
-    "from pyciss import io, ringcube\n",
-    "from pyciss.opusapi import OPUS\n",
-    "import tempfile\n",
-    "from pathlib import Path\n",
-    "tmpdir = tempfile.TemporaryDirectory()\n",
-    "opus = OPUS()\n",
+    "from pyciss import io\n",
     "img_id = 'N1695760475'\n",
-    "opus.query_image_id(img_id)\n",
-    "opus.download_results(savedir = tmpdir.name)"
+    "pm = io.PathManager(img_id, savedir='/myroot')"
    ]
   },
   {
@@ -28,13 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "# test_PathManager\n",
-    "# This test illustrates how the Pathmanager can be used to find where data is located\n",
-    "# This should only be required in rare cases.\n",
-    "pathmanager = io.PathManager(img_id, savedir=tmpdir.name)\n",
-    "assert pathmanager.basepath == Path(tmpdir.name) / img_id\n",
-    "assert pathmanager.raw_image == Path(tmpdir.name) / img_id / (img_id+'_1.IMG')\n",
-    "assert pathmanager.cubepath == Path(tmpdir.name) / img_id / (img_id+'_1.cal.dst.map.cub')"
+    "pm.basepath"
    ]
   },
   {
@@ -44,7 +50,98 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "pm.img_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "pm.raw_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pm.cubepath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pm.raw_label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pm.cal_cub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pm.dst_cub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pm.calib_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pm.calib_label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pm.tif"
+   ]
   }
  ],
  "metadata": {
