implement opusapi tests born out of notebook
* add stuff to examples notebook in docs
* add setup settings for pytest for `python setup.py test`

--- a/docs/examples.ipynb
+++ b/docs/examples.ipynb
@@ -1,18 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Usage examples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyciss import io, opusapi"
+    "from pyciss import io"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The `io` module manages where data is stored and \n",
+    "\n",
     "This is my database root path, where all downloaded images are automatically stored.\n",
     "\n",
     "Check if this is automatically set for you at a reasonable location. Otherwise, control it with the config.ini file."
@@ -24,7 +33,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "io.dbroot"
+    "io.config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io.get_db_root()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OPUS API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyciss import opusapi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opus = opusapi.OPUS()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opus.query_image_id('N1541711364')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opus.download_previews()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opus.show_images()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opus.download_results()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io.get_db_root()"
    ]
   },
   {
